--- a/app/src/main/res/layout/fragment_lich_su_dat_hang.xml
+++ b/app/src/main/res/layout/fragment_lich_su_dat_hang.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,25 +7,30 @@
     android:layout_marginBottom="100dp"
     tools:context=".fragments.LichSuDatHangFragment">
 
-    <androidx.appcompat.widget.Toolbar
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Lịch sử đặt hàng"
-            android:layout_gravity="center"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-    </androidx.appcompat.widget.Toolbar>
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lịch sử đặt hàng"
+                android:layout_gravity="center"
+                android:textSize="20dp"
+                android:textStyle="bold"/>
+        </androidx.appcompat.widget.Toolbar>
 
-    <ListView
-        android:id="@+id/listViewLS"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="8dp"
-        />
+        <ListView
+            android:id="@+id/listViewLS"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="8dp"
+            />
+    </LinearLayout>
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
