update đổi thông tin tài khoản

--- a/app/src/main/res/layout/activity_doi_thong_tin_tkactivity.xml
+++ b/app/src/main/res/layout/activity_doi_thong_tin_tkactivity.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.DoiThongTinTKActivity"
     android:orientation="vertical">
 
-    
+
     <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -35,15 +35,15 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/avatarIv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:srcCompat="@drawable/avatar" />
+        android:src="@drawable/user_default"/>
 
     <!-- TextInputLayout with EditText -->
     <com.google.android.material.textfield.TextInputLayout
