--- a/app/src/main/res/layout/gio_hang_item_layout.xml
+++ b/app/src/main/res/layout/gio_hang_item_layout.xml
@@ -44,18 +44,13 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:orientation="horizontal"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:layout_gravity="center"
+            android:layout_marginBottom="40dp"
             android:gravity="center"
             android:background="@drawable/custom_button"
             android:layout_marginHorizontal="10dp">
-            <ImageView
-                android:id="@+id/btntru"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/minus"
-                android:layout_marginEnd="5dp"
-                />
+
             <TextView
                 android:id="@+id/tvsoluong"
                 android:layout_width="40dp"
@@ -64,12 +59,7 @@
                 android:textSize="16dp"
                 android:gravity="center"
                 android:layout_gravity="center"/>
-            <ImageView
-                android:id="@+id/btncong"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/plus1"
-                android:layout_marginStart="5dp"/>
+
         </LinearLayout>
     </LinearLayout>
 
