--- a/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
+++ b/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
@@ -44,7 +44,7 @@
         android:layout_marginStart="16dp"
         android:hint="Name shop"
         android:textSize="24dp"
-        android:textColor="@color/pink"
+        android:textColor="@color/black"
         android:textStyle="bold" />
 
     <EditText
@@ -54,7 +54,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
         android:hint="0123456789"
-        android:textColor="@color/pink"
+        android:textColor="@color/black"
         android:textSize="16dp" />
 
     <LinearLayout
@@ -90,17 +90,21 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_weight="1"
                 android:hint="https:/www.facebook.comlocale=vi_VN"
-                android:textColor="@color/pink"
+                android:textColor="@color/black"
                 android:textSize="12dp" />
 
         </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="8dp"
-            android:background="#CCCCCC"/>
+            android:layout_marginEnd="20dp"
+            android:background="#CCCCCC"
+            tools:layout_marginStart="20dp" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -128,31 +132,35 @@
                 android:textStyle="bold"
                 android:textSize="18dp" />
 
-        <EditText
-            android:id="@+id/edAddress"
-            android:layout_width="262dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="20dp"
-            android:layout_weight="1"
-            android:hint="Address"
-            android:textSize="12dp"
-            android:textColor="@color/pink" />
+            <EditText
+                android:id="@+id/edAddress"
+                android:layout_width="262dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_weight="1"
+                android:hint="Address"
+                android:textColor="@color/black"
+                android:textSize="12dp" />
 
         </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
-            android:background="#CCCCCC"/>
+            android:layout_marginEnd="20dp"
+            android:background="#CCCCCC" />
     </LinearLayout>
-        <Button
-            android:id="@+id/btnUpdate"
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="32dp"
-            android:text="Update"/>
+    <Button
+        android:id="@+id/btnUpdate"
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="24dp"
+        android:text="Sửa thông tin"/>
 
 </LinearLayout>
