--- a/app/src/main/res/layout/activity_chi_tiet_hoa_don.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_hoa_don.xml
@@ -101,14 +101,14 @@
         android:layout_marginLeft="16dp"
         android:textColor="#000000"
         android:textSize="16dp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="*Ghi chú:"
-        android:layout_marginLeft="16dp"
-        android:textColor="#000000"
-        android:textSize="16dp"
-        android:layout_marginBottom="8dp"/>
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="*Ghi chú:"-->
+<!--        android:layout_marginLeft="16dp"-->
+<!--        android:textColor="#000000"-->
+<!--        android:textSize="16dp"-->
+<!--        android:layout_marginBottom="8dp"/>-->
 
     <View
         android:layout_width="match_parent"
