--- a/app/src/main/res/layout/activity_chi_tiet_hoa_don.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_hoa_don.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp">
         <ImageView
+            android:id="@+id/imgBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/back1" />
