--- a/app/src/main/res/layout/dialog_change_dia_chi.xml
+++ b/app/src/main/res/layout/dialog_change_dia_chi.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp"
     android:minWidth="250dp">
@@ -17,10 +18,46 @@
         android:paddingVertical="8dp"/>
 
     <EditText
+        android:id="@+id/edtNewName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/edit_text_bg"
+        android:textSize="16sp"
+        android:layout_marginVertical="8dp"
+        android:paddingHorizontal="4dp"
+        android:hint="Tên người nhận"/>
+
+    <View
+        android:id="@+id/grayLine1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grayMedium"/>
+
+    <EditText
+        android:id="@+id/edtNewPhoneNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/edit_text_bg"
+        android:textSize="16sp"
+        android:layout_marginVertical="8dp"
+        android:paddingHorizontal="4dp"
+        android:hint="Số điện thoại"/>
+
+    <View
+        android:id="@+id/grayLine2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grayMedium"/>
+
+    <EditText
         android:id="@+id/edtNewDiaChi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nhập địa chỉ"/>
+        android:background="@drawable/edit_text_bg"
+        android:textSize="16sp"
+        android:layout_marginVertical="8dp"
+        android:paddingHorizontal="4dp"
+        android:hint="Địa chỉ"/>
 
     <Button
         android:id="@+id/btnSave"
