--- a/app/src/main/res/layout/activity_chi_tiet_hoa_don.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_hoa_don.xml
@@ -68,6 +68,13 @@
         android:text="- SDT Liên hệ: 0987654321"
         android:textColor="#000000"
         android:textSize="16dp" />
+        <TextView
+            android:id="@+id/tvGhiChu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="-Ghi chú: "
+            android:textColor="#000000"
+            android:textSize="16dp"/>
     </LinearLayout>
     <View
         android:layout_width="match_parent"
